syntax = "proto3";

package xray.transport.internet.websocket;
option csharp_namespace = "Xray.Transport.Internet.Websocket";
option go_package = "github.com/xtls/xray-core/transport/internet/websocket";
option java_package = "com.xray.transport.internet.websocket";
option java_multiple_files = true;

message Config {
  string host = 1;
  string path = 2; // URL path to the WebSocket service. Empty value means root(/).
  map<string, string> header = 3;
  bool accept_proxy_protocol = 4;
  uint32 ed = 5;
  uint32 heartbeatPeriod = 6;
}
